# ChronoGuardian-game

./: CMakeCache.txt  CMakeLists.txt  ChronoGuardian  ENHANCEMENTS.md  GLUT_MIGRATION.md  INSTALL.md  LEVEL2_FEATURES.md  MODELS_TEXTURES.md  Makefile  PLAYER_MODEL_GUIDE.md  PROJECT_SUMMARY.md  README.md  REQUIREMENTS_CHECKLIST.md  TESTING.md  WALKTHROUGH_IMPORT_MODELS.md  build.sh  cmake_install.cmake  scene.gltf
assets/models/: air_vent.glb  aztec_stone_heart.glb  blue_gem.glb  doubloon.glb  human_skeleton_download_free.glb  old_stone_arch.glb  spinels_gem.glb
assets/models/dirt_ground_xdhhdgq_4k_ue_high/: xdhhdgq.json
assets/sounds/: README.md
include/: AudioManager.h  Camera.h  Game.h  GameObject.h  Input.h  Level.h  Level1.h  Level2.h  Mesh.h  Model.h  ModelCache.h  ParticleSystem.h  Physics.h  Player.h  Renderer.h  Shader.h  Texture.h  Transform.h  stb_image.h
shaders/: fragment.glsl  particle_fragment.glsl  particle_vertex.glsl  start_screen_fragment.glsl  vertex.glsl  win_screen_fragment.glsl
src/: AudioManager.cpp  Camera.cpp  Game.cpp  GameObject.cpp  Input.cpp  Level.cpp  Level1.cpp  Level2.cpp  Mesh.cpp  Model.cpp  ParticleSystem.cpp  Physics.cpp  Player.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  main.cpp
